--- a/style.css
+++ b/style.css
@@ -1,146 +1,150 @@
 /* General rules */
-body{
-  overflow-x: hidden;
-  background-color: lightgrey;
-  font-family: 'Courier New', Courier, monospace;
+body {
+    overflow-x: hidden;
+    background-color: lightgrey;
+    font-family: "Courier New", Courier, monospace;
 }
-
-
 
 /* Navigation */
-.navbar{
-  text-transform: uppercase;
-  font-size: 0.9rem;
-  background-color: black;
-  letter-spacing: 0.1rem;
-  font-weight: bold;
+.navbar {
+    text-transform: uppercase;
+    font-size: 0.9rem;
+    background-color: black;
+    letter-spacing: 0.1rem;
+    font-weight: bold;
 }
 
-.navbar-brand>img{
-  height: 1.8rem;
+.navbar-brand > img {
+    height: 1.8rem;
 }
 
-.navbar-nav li{
-  padding-right: 0.6rem;
+.navbar-nav li {
+    padding-right: 0.6rem;
 }
 
-.navbar-nav .nav-item .nav-link{
-  color: white;
-  padding-top: 0.6rem;
+.navbar-nav .nav-item .nav-link {
+    color: white;
+    padding-top: 0.6rem;
 }
 
-.navbar-nav .nav-item .nav-link:hover{
-  color: lime;
+.navbar-nav .nav-item .nav-link:hover {
+    color: lime;
 }
 
 /* landing */
-.home-inner{
-  background-image: url(img/computers.png);
-  background-size: contain;
+.home-inner {
+    background-image: url(img/computers.png);
+    background-size: contain;
 }
 
-.caption{
-  width: 100%;
-  max-width: 100%;
-  position: absolute;
-  top: 40%;
-  color:white;
-  text-transform: uppercase;
-  z-index: 1;
+.caption {
+    width: 100%;
+    max-width: 100%;
+    position: absolute;
+    top: 40%;
+    color: white;
+    text-transform: uppercase;
+    z-index: 1;
 }
 
-.caption h1{
-  font-size: 1.5rem;
-  letter-spacing: 0.1rem;
-  padding-bottom: 1rem;
+.caption h1 {
+    font-size: 1.5rem;
+    letter-spacing: 0.1rem;
+    padding-bottom: 1rem;
 }
 
-.caption h3{
-  padding-bottom: 1rem;
+.caption h3 {
+    padding-bottom: 1rem;
 }
 
 /* Course */
-#course{
-  background-color: lightgrey;
+#course {
+    background-color: lightgrey;
 }
 
 /* Features */
-.jumbotron{
-  color: black;
-  padding-bottom: 0;
-  padding-top:0;
-  margin-bottom:0;
+.jumbotron {
+    color: black;
+    padding-bottom: 0;
+    padding-top: 0;
+    margin-bottom: 0;
 }
 
-.features-list{
-  list-style: none;
+.features-list {
+    list-style: none;
 }
 
-#features .line{
-  margin-bottom: 0;
+#features .line {
+    margin-bottom: 0;
 }
 
 /* Resources */
 
-#resources .resource h3{
-  text-decoration: underline;
+#resources .resource h3 {
+    text-decoration: underline;
 }
 
-#resources .resource{
-  border: 1px dashed darkgrey;
+#resources .resource {
+    border: 1px dashed darkgrey;
 }
 
 /* Clients */
-.client{
-  max-width: 90%;
-  border-radius: 50%;
+.client {
+    max-width: 90%;
+    border-radius: 50%;
+    transition: 0.5s;
 }
 
-.blockquote p{
-  width: 70%;
-  font-size: 0.7em;
-  margin: 0 auto;
+.client:hover {
+    transform: scale(1.2);
+}
+
+.blockquote p {
+    width: 70%;
+    font-size: 0.7em;
+    margin: 0 auto;
 }
 
 /* Footer  */
 footer {
-  border: 2px dashed darkgrey;
+    border: 2px dashed darkgrey;
 }
 
-footer, footer a{
-  color: white;
+footer,
+footer a {
+    color: white;
 }
 
-footer img{
- height: 1.8rem;
- margin: 0.5rem 0;
+footer img {
+    height: 1.8rem;
+    margin: 0.5rem 0;
 }
 
-footer a:hover, footer p, footer h3{
-  color:black;
+footer a:hover,
+footer p,
+footer h3 {
+    color: black;
 }
-
 
 /* Own media queries */
-@media all and (max-width: 767px){
-  .client{
-    width: 50%;
-    max-width: 30vw;
-  }
+@media all and (max-width: 767px) {
+    .client {
+        width: 50%;
+        max-width: 30vw;
+    }
 }
 
-@media all and (min-width: 768px) and (max-width:991px){
- .client{
-   width: 70%;
- }
+@media all and (min-width: 768px) and (max-width: 991px) {
+    .client {
+        width: 70%;
+    }
 }
 
-@media all and (min-width:992px){
-  .client{
-    min-width: 15vw;
-  }
+@media all and (min-width: 992px) {
+    .client {
+        min-width: 15vw;
+    }
 }
-
 
 /*============= SECTION =============*/
 
@@ -169,7 +173,6 @@ footer a:hover, footer p, footer h3{
   background-color: #189582;
   color: white;
 } */
-
 
 /*============ BOOTSTRAP BREAK POINTS:
 
